welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:9: error: not found: value num
		if (min>num(k)){
                        ^